uri para o deploy criada

--- a/package.json
+++ b/package.json
@@ -10,5 +10,24 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
-  }
+  },
+  "name": "yu-gi-oh-store-back",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lfscruuz/Yu-Gi-Oh-Store-Back.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lfscruuz/Yu-Gi-Oh-Store-Back/issues"
+  },
+  "homepage": "https://github.com/lfscruuz/Yu-Gi-Oh-Store-Back#readme",
+  "description": ""
 }
