--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "name": "yu-gi-oh-store-back",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
