--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
+  "name": "yu-gi-oh-store",
+  "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node ./src/index.js",
+    "dev": "npx nodemon ./src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
+    "alert": "^5.1.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
-    "mongodb": "^4.12.0",
+    "mongodb": "^4.12.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
