--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "alert": "^5.1.1",
+    "axios": "^1.2.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "mongodb": "^4.12.1",
+    "save": "^2.9.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
