--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "mongodb": "^4.12.1",
+    "mongoose": "^6.7.3",
     "save": "^2.9.0",
     "uuid": "^9.0.0"
   },
